--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="menu_product">Product</string>
     <string name="login_preference">test</string>
     <string name="menu_patient">Patient</string>
+    <string name="menu_spent">Spent</string>
 </resources>
